1.23
----
* new InterventionBudget endpoint
* updated InterventionByLocation endpoint
* updated Intervention endpoint
* new v2 intervention serializer
* new PartnerContact endpoint
* new PartnerAgreement endpoint
* new ActionPoint endpoint


1.22
----
* Compatible with eTools 6.10
* New endpoint datamart/actionpoints/
* New endpoint datamart/interventions-locations/
* New endpoint datamart/users/
* New endpoint datamart/users-offices/
* New endpoint datamart/reports/sections/
* New endpoint datamart/partners/contacts/
* New endpoint datamart/partners/agreements/
* Updates datamart/travel-activities
* Updates datamart/travel-activities: add result_* fields
* Updates InterventionSerializerFull: add locations, offices, sections, partner_id and partner_source_id
* fixes Intervention serializers
* fixes formats popup menu
* new LocationMixin
* fixes Partner.hact_values handling
* ActionPoint - new serializer (v2)
* Fixes PDIndicator


1.21
----
* == Not released ==


1.20
----
* fixes FundsReservationLoader
* fixes FAMIndicatorLoader month handling
* fixes HACTLoader
* enable ETLLog reset
* add ability


1.19
----
* add Partner endpoint
* add extra Location fields
* add TravelActivity endpoint


1.18
----
* fixes travel filtering
* disable live stats


1.16
----
* update to eTools 6.7
* improves Loader logic
* add Travel endpoint


1.15
----
* add ability to truncate DataMart tables
* fixes init-setup PeriodicTask creation


1.14
----
* Fix loading Intervention
* migrations reset


1.12
---------
* new endpoint DPIndicator
* preload helpers


1.11
---------
* add impersonation
* fixes schema permission check


1.10
----
* Loader refactoring
* new endpoint 'Funds Reservation'
* add budget informations to interventions


1.9 (dev)
---------
* WARNINGS: migration reset
* Location/GatewayType endpoints
* add action to queue multiple tasks
* updates schema to eTools v6.5.1


1.8
---
* WARNINGS: migration reset