@@ -3,3 +3,4 @@ from .funds import *  # noqa
 from .partners import *  # noqa
 from .reports import *  # noqa
 from .tpmtpmvisit import *  # noqa
+from .user_country import WorkspaceViewSet  # noqa
