@@ -7,6 +7,7 @@
 * new PartnerContact endpoint
 * new PartnerAgreement endpoint
 * new ActionPoint endpoint
+* new Workspaces endpoint
 
 
 1.22
